# hedera-guarded-invoice-agent

./: .env.example  DEMO_SCRIPT.md  FEEDBACK_DRAFT.md  README.md  SUBMISSION.md  pyproject.toml
examples/: hedera_agentkit_return_bytes_langchain.py  invoice_rejected.json  invoice_valid.json
src/hedera_guarded_invoice_agent/: __init__.py  cli.py  hedera_adapter.py  models.py  plugin.py  policy.py
tests/: test_plugin.py  test_policy.py
