[project]
name = "hedera-guarded-invoice-agent"
version = "0.1.0"
description = "Human-in-the-loop Hedera invoice payment agent prototype"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
hedera-guarded-invoice-agent = "hedera_guarded_invoice_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
